<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_org_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_org_event"
            android:icon="@drawable/event"
            android:title="@string/create_event" />
        <item
            android:id="@+id/nav_org_list"
            android:icon="@drawable/list"
            android:title="@string/events" />
    </group>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_org_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
