<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateEventFragment">

    <LinearLayout
        android:id="@+id/create_event_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"  >

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Event"
            android:textSize="30sp"
            android:textColor="@color/grey_95"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7dp">

            <LinearLayout
                android:id="@+id/create_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_3"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/event_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/event_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Event Name"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/event_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Event Description"
                            android:maxLines="4"
                            android:singleLine="false" />

                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <DatePicker
                            android:id="@+id/date_pick"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="30dp"
                            android:datePickerMode="calendar" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Choose the date of the event"
                            android:textAlignment="center"
                            android:textColor="@color/grey_95"
                            android:textSize="18sp" />

                    </RelativeLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/type_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/type_arrays"
                            android:maxLines="1"
                            android:prompt="@string/type_prompt" />

                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <AutoCompleteTextView
                            android:id="@+id/event_task"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Event Tasks: setup decorations, transport bride, cook, clean"
                            android:maxLines="4"
                            android:singleLine="false" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.button.MaterialButton
                        android:id="@+id/mapOpenBtn"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="150dp"
                        android:onClick="openMap"
                        android:text="@string/open_map"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/location_holder_long"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/location_holder_lat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/preview_image"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        app:srcCompat="@drawable/avatar" />

                    <Button
                        android:id="@+id/uploadBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="170dp"
                        android:onClick="uploadImage"
                        android:text="@string/upload" />

                    <android.support.design.button.MaterialButton
                        android:id="@+id/createEventBtn"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="150dp"
                        android:onClick="createEvent"
                        android:text="@string/create_event_button" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>